force-app/main/default/objects/Post__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Author_Writer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author/Writer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Posts</relationshipLabel>
        <relationshipName>Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Published_Date__c</fullName>
        <label>Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Approved__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <type>TextArea</type>
    </fields>
    <label>Post</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Author_Writer__c</columns>
        <columns>Published_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Tags__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Post Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>